<resources>
    <string name="phone_number">Phone</string>
    <string name="e_mail">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="first_and_last_name">First and Last Name</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration">Registration</string>
    <string name="i_already_have_an_account">Already have an account?</string>
    <string name="personal_details">PERSONAL DETAILS</string>
    <string name="error_message_invalid_name">Invalid name!</string>
    <string name="error_message_invalid_email">Invalid email!</string>
    <string name="error_message_invalid_phone_number">Invalid phone number!</string>
    <string name="error_message_invalid_address">Invalid address!</string>
    <string name="error_message_invalid_password">Invalid password!</string>
    <string name="error_message_not_matching_password">Password not matching!</string>
    <string name="error_message_invalid_signal_title">Signal title required!</string>
    <string name="error_message_invalid_description">Invalid description!</string>
    <string name="error_message_invalid_signal_description">The description must be between 3–500 symbols!</string>
    <string name="login">Lоg in</string>
    <string name="skip">Skip</string>
    <string name="login_title">LOVE\'n PARK</string>
    <string name="login_card_title">Log in to Love’n Park</string>
    <string name="login_card_description">Sofia’s top hiking and biking location</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="dont_have_an_account">don\'t have an account?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgotten_password"><u>Forgotten password?</u></string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_to_your_profile">Sign in to your account</string>
    <string name="enter_your_password">Enter your email and password to access your personal profile.</string>
    <string name="sign_in_profile">Sign in profile</string>
    <string name="sign_with_email">Sign In with email</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="network_error">Error</string>
    <string name="network_error_description">Please check your internet connection and try again</string>
    <string name="user_profile_change_password_dialog_description">You successfully changed your access password!</string>
    <string name="user_profile_settings_dialog_title">Thank you!</string>
    <string name="user_profile_settings_dialog_description">You successfully changed your data.</string>
    <string name="user_profile_settings_delete_dialog_">Your profile will be permanently deleted. Are you sure you want to delete your profile?</string>
    <string name="user_profile_reports_description">Keep track of reports by you or others</string>
    <string name="update_profile">Update profile</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="cancel_changes">CANCEL CHANGES</string>
    <string name="create_your_signal_here">CREATE YOUR SIGNAL HERE</string>
    <string name="pick_image">PICK IMAGE</string>
    <string name="signal_title">Signal title</string>
    <string name="add_description_here">Add description here</string>
    <string name="done">DONE</string>
    <string name="about_park">About</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="map">Map</string>
    <string name="sites">Sites</string>
    <string name="profile">Profile</string>
    <string name="bookmarks">Favourite</string>
    <string name="user_profile_reports">Reports</string>
    <string name="delete_profile">Delete profile?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string-array name="profileOptions">
        <item>No Selected Item</item>
        <item>Update Profile</item>
        <item>Delete Profile</item>
    </string-array>
    <string-array name="categorySignal">
        <item>Choose category</item>
        <item>Pollution</item>
        <item>Broken</item>
    </string-array>
    <string name="your_signal_position">Your signal position!</string>
    <string name="successfully_pinned_signal_position">Successfully pinned your signal position.</string>
    <string name="click_map_to_get_signal_location">Click on the map to get the location of your signal!</string>
    <string name="choose_upload_photo_type">UPLOAD PHOTO</string>
    <string name="take_photo">Take а Photo</string>
    <string name="choose_from_gallery">Gallery</string>
    <string name="fragment_title_add_photos">Add photos</string>
    <string name="fragment_title_description">Description</string>
    <string name="okay">OK</string>
    <string name="cancel">Cancel</string>
    <string name="permission_required">Permission required</string>
    <string name="dialog_gallery_rationale_permission_message">
        Access to the gallery is required in order to attach photos of the irregularity to the signal.</string>
    <string name="dialog_gallery_permission_settings_message">
        We need access to the gallery permission. Please grant it in the settings.</string>
    <string name="too_many_selected_photos">
        Too many chosen photos. Only up to 5 are allowed.</string>
    <string name="camera_permission_rationale_dialog"> "Access to the camera is required in order to take a photo of the irregularity"</string>
    <string name="camera_permission_settings_dialog"> "We need access to the camera permission. Please grant it in the settings"</string>
    <string name="camera_external_permission_rationale_dialog"> "Access to the camera and write external storage is required in order to take a photo of the irregularity"</string>
    <string name="camera_external_permission_settings_dialog"> "We need access to the camera and write external storage permissions. Please grant them in the settings"</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="photo">Photo</string>
    <string name="description">Description</string>
    <string name="overview">Overview</string>
    <string name="inspiration_quote">Nature is love, \n keep it safe</string>
    <string name="signal">Signal</string>
    <string name="upload_photo">Upload a photo</string>
    <string name="confirm_profile_deletion">Confirm profile deletion</string>
    <string name="test_signal_info">№1221 | 08.09.2022 | Fallen tree</string>
    <string name="i_agree_with">I agree with the</string>
    <string name="terms_and_conditions_"><u>Terms and Conditions</u></string>
    <string name="terms_and_conditions_registration"><u>Terms and Conditions.</u></string>
    <string name="confirm">Confirm</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="create_a_profile_as_complete_information_in_the_fields_below">Create a profile as complete information in the fields below.</string>
    <string name="press_and_hold_the_pin_to_move_it">Press and hold the pin to move it</string>
    <string name="forward">Next</string>
    <string name="gallery">Gallery</string>
    <string name="photo_camera">Photo</string>
    <string name="file">File</string>
    <string name="file_counter">%1$d/%2$d</string>
    <string name="display_date_time">%1$s.%2$s.%3$s</string>
    <string name="display_overview_signal_number">№%1$s%2$s%3$s%4$s%5$s</string>
    <string name="files_number_warning">Uploading more than %1$d files is not allowed</string>
    <string name="create_signal">Create Signal</string>
    <string name="map_pin_title_bench">Bench</string>
    <string name="map_pin_title_bicycle">Cycling</string>
    <string name="map_pin_title_trash">Trash Bin</string>
    <string name="map_pin_title_other">Other</string>
    <string name="forgotten_password_title">Forgotten password</string>
    <string name="forgotten_password_description">Please enter your email address so we can send you a password reset link.</string>
    <string name="choose_category">Signal Type</string>
    <string name="choose_location">Location</string>
    <string name="cancel_signal_creation">Cancel the signal creation</string>
    <string name="signal_submission_counter_msg">We are very sorry! \nТhe time for submission is taking a while</string>
    <string name="signal_confirm_dialog_title">Are you sure?</string>
    <string name="signal_confirm_dialog_button_confirm_text">Confirm</string>
    <string name="signal_confirm_dialog_button_skip">Skip</string>
</resources>