<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_delete_profile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_dialogs"
    android:paddingStart="24dp"
    android:paddingTop="24dp"
    android:paddingEnd="24dp"
    android:paddingBottom="34dp">

    <TextView
        android:id="@+id/tv_question"
        style="@style/HeadlineSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/signal_confirm_dialog_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_info"
        style="@style/BodyLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:text="@string/user_profile_settings_delete_dialog_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_question" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_confirm"
        style="@style/PrimaryFilledMediumButton"
        android:layout_width="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/signal_confirm_dialog_button_confirm_text"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toEndOf="@id/tv_info"
        app:layout_constraintTop_toBottomOf="@id/tv_info" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_skip"
        style="@style/SecondaryFilledMediumButton"
        android:layout_width="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/signal_confirm_dialog_button_skip"
        app:iconGravity="textStart"
        app:layout_constraintEnd_toStartOf="@id/button_confirm"
        app:layout_constraintTop_toBottomOf="@id/tv_info" />
</androidx.constraintlayout.widget.ConstraintLayout>