<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/updateUserProfileScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/updateProfileConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/updateUserProfilePersonalDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/update_profile"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/updateUserProfileFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="name"
            android:hint="@string/first_name"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateUserProfilePersonalDetails" />

        <TextView
            android:id="@+id/updateUserProfileFirstNameError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="4dp"
            android:paddingEnd="0dp"
            android:paddingBottom="12dp"
            android:text="@string/error_message_invalid_name"
            android:textColor="@color/invalid_red"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateUserProfileFirstName" />

        <EditText
            android:id="@+id/updateUserProfileLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="name"
            android:hint="@string/last_name"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateUserProfileFirstNameError" />

        <TextView
            android:id="@+id/updateUserProfileLastNameError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="4dp"
            android:paddingEnd="0dp"
            android:paddingBottom="12dp"
            android:text="@string/error_message_invalid_name"
            android:textColor="@color/invalid_red"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateUserProfileLastName" />

        <EditText
            android:id="@+id/updateUserProfilePhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="phone"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateUserProfileLastNameError" />

        <TextView
            android:id="@+id/updateUserProfilePhoneError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="4dp"
            android:paddingEnd="0dp"
            android:paddingBottom="12dp"
            android:text="@string/error_message_invalid_phone_number"
            android:textColor="@color/invalid_red"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateUserProfilePhoneNumber" />

        <EditText
            android:id="@+id/updateUserProfileAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="password"
            android:hint="@string/address"
            android:inputType="text"
            android:maxLines="2"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateUserProfilePhoneError" />

        <TextView
            android:id="@+id/updateUserProfileAddressError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="4dp"
            android:paddingEnd="0dp"
            android:paddingBottom="12dp"
            android:text="@string/error_message_invalid_address"
            android:textColor="@color/invalid_red"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateUserProfileAddress" />

        <EditText
            android:id="@+id/updateUserProfilePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateUserProfileAddressError" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/updateProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="80dp"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/update_profile"
            app:layout_constraintTop_toBottomOf="@+id/updateUserProfilePassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/changePasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="80dp"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/change_password"
            app:layout_constraintTop_toBottomOf="@+id/updateProfileButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancelChangesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="80dp"
            android:gravity="center"
            android:text="@string/cancel_changes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changePasswordButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>