<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="24dp"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/tvLoginTitle"
        style="@style/TitleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="start"
        android:text="@string/sign_in_to_your_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLoginDescription"
        style="@style/BodyMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/enter_your_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:inputType="textEmailAddress"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/ic_mail_registration"
        app:endIconMode="custom"
        app:errorEnabled="false"
        app:errorIconDrawable="@drawable/ic_mail_registration"
        app:errorIconTint="@color/bittersweet_shimmer"
        app:errorTextColor="@color/bittersweet_shimmer"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginDescription">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginEmail"
            style="@style/LabelLarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/selector_edit_text_line"
            android:hint="@string/e_mail"
            android:textColorHint="@color/granite_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="custom"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutLoginEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginPassword"
            style="@style/LabelLarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/selector_edit_text_line"
            android:hint="@string/password"
            android:textColorHint="@color/granite_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnForgottenPassword"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/fern_green"
        android:text="@string/forgotten_password"
        android:textAppearance="@style/TitleMedium"
        android:textColor="@color/fern_green"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutLoginPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/nativeLoginButton"
        style="@style/PrimaryFilledLargeButton"
        android:layout_marginHorizontal="0dp"
        android:layout_marginVertical="20dp"
        android:enabled="false"
        android:text="@string/login"
        android:textAppearance="@style/LabelLarge"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnForgottenPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoogleSignIn"
        style="@style/PrimaryOutlinedLargeButton"
        android:layout_marginHorizontal="0dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_in_with_google"
        android:textAppearance="@style/LabelLarge"
        android:textColor="@color/eerie_black"
        android:textStyle="bold"
        app:icon="@drawable/google_color_logo"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nativeLoginButton"
        app:strokeColor="@color/eerie_black" />

</androidx.constraintlayout.widget.ConstraintLayout>